--- a/app/src/main/res/drawable/button_bg1.xml
+++ b/app/src/main/res/drawable/button_bg1.xml
@@ -15,7 +15,7 @@
             <shape>
                 <stroke
                     android:width="1dp"
-                    android:color="#fff"/>
+                    android:color="#000"/>
             </shape>
         </item>
     </layer-list>
