--- a/app/src/main/res/layout/fragment_home_sub_event.xml
+++ b/app/src/main/res/layout/fragment_home_sub_event.xml
@@ -34,19 +34,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
-
-            <ImageView
+            <RelativeLayout
                 android:id="@+id/athletics"
-
                 android:layout_height="120dp"
                 android:layout_marginTop="2dp"
                 app:layout_widthPercent="30%"
-                android:src="@drawable/athletics"
                 android:layout_marginLeft="7dp"
                 android:layout_marginStart="7dp"
-                />
+                >
+                <ImageView
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:src="@drawable/athletics"
 
-            <ImageView
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ATHLETICS"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="14sp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="#000"/>
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:id="@+id/badmintionBoys"
                 android:layout_height="120dp"
                 app:layout_widthPercent="30%"
@@ -55,63 +69,108 @@
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/athletics"
                 android:layout_toRightOf="@+id/athletics"
-                android:src="@drawable/badminton" />
+                >
 
-            <ImageView
-                android:id="@+id/badmintionGirls"
-                app:layout_widthPercent="30%"
-                android:layout_height="120dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/badmintionBoys"
-                android:layout_toRightOf="@+id/badmintionBoys"
-                android:src="@drawable/badmintongirls" />
+                <ImageView
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:src="@drawable/badminton" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="BADMINTON"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="14sp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="#000"/>
 
+            </RelativeLayout>
 
-            <ImageView
+            <RelativeLayout
                 android:id="@+id/basketballBoys"
                 app:layout_widthPercent="30%"
-                android:layout_below="@+id/athletics"
+                android:layout_toEndOf="@+id/badmintionBoys"
+                android:layout_toRightOf="@+id/badmintionBoys"
                 android:layout_height="120dp"
                 android:layout_marginLeft="7dp"
                 android:layout_marginStart="7dp"
-                android:src="@drawable/basketball" />
 
-            <ImageView
-                android:id="@+id/basketballGirls"
-                android:layout_height="120dp"
-                app:layout_widthPercent="30%"
-                android:layout_below="@+id/badmintionGirls"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/basketballBoys"
-                android:layout_toRightOf="@+id/basketballBoys"
-                android:src="@drawable/basketballgirls" />
 
-            <ImageView
+                >
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/basketball" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="BASKETBALL"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="14sp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="#000"/>
+            </RelativeLayout>
+
+
+            <RelativeLayout
                 android:id="@+id/chess"
                 app:layout_widthPercent="30%"
                 android:layout_height="120dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_below="@+id/badmintionGirls"
-                android:layout_toEndOf="@+id/basketballGirls"
-                android:layout_toRightOf="@+id/basketballGirls"
-                android:src="@drawable/chess" />
+                android:layout_marginLeft="7dp"
+                android:layout_marginStart="7dp"
+                android:layout_below="@+id/athletics"
+                >
+                <ImageView
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:src="@drawable/chess" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="CHESS"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="14sp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="#000"/>
 
-            <ImageView
+            </RelativeLayout>
+            <RelativeLayout
                 android:id="@+id/cricket"
-                android:layout_below="@+id/basketballBoys"
+                android:layout_below="@+id/athletics"
                 android:layout_height="120dp"
                 android:layout_marginTop="2dp"
                 app:layout_widthPercent="30%"
-                android:src="@drawable/cricket"
-                android:layout_marginLeft="7dp"
-                android:layout_marginStart="7dp"
-                />
+                android:layout_toEndOf="@+id/chess"
+                android:layout_toRightOf="@+id/chess"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                >
+                <ImageView
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:src="@drawable/cricket"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="CRICKET"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="14sp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="#000"/>
 
-            <ImageView
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:id="@+id/football"
                 android:layout_height="120dp"
                 app:layout_widthPercent="30%"
@@ -120,72 +179,79 @@
                 android:layout_below="@+id/basketballBoys"
                 android:layout_toEndOf="@+id/cricket"
                 android:layout_toRightOf="@+id/cricket"
-                android:src="@drawable/football" />
+                >
+                <ImageView
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:src="@drawable/football" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="FOOTBALL"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="14sp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="#000"/>
 
-            <ImageView
-                android:id="@+id/lawnBoys"
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/tableBoys"
                 app:layout_widthPercent="30%"
-                android:layout_height="120dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_below="@+id/basketballBoys"
-                android:layout_toEndOf="@+id/football"
-                android:layout_toRightOf="@+id/football"
-                android:src="@drawable/lawn_tennis" />
-
-
-            <ImageView
-                android:id="@+id/lawnGirls"
-                app:layout_widthPercent="30%"
-                android:layout_below="@+id/cricket"
                 android:layout_height="120dp"
                 android:layout_marginLeft="7dp"
                 android:layout_marginStart="7dp"
-                android:src="@drawable/lawn_tennisgirls" />
+                android:layout_below="@+id/chess"
+                >
+                <ImageView
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:src="@drawable/table_tennis" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TABLE TENNIS"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="14sp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="#000"/>
 
-            <ImageView
-                android:id="@+id/tableBoys"
-                android:layout_height="120dp"
-                app:layout_widthPercent="30%"
-                android:layout_below="@+id/cricket"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
+            </RelativeLayout>
 
-                android:layout_toEndOf="@+id/lawnGirls"
-                android:layout_toRightOf="@+id/lawnGirls"
-                android:src="@drawable/table_tennis" />
-
-            <ImageView
-                android:id="@+id/tableGirls"
-                app:layout_widthPercent="30%"
-                android:layout_height="120dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_below="@+id/cricket"
-                android:layout_toEndOf="@+id/tableBoys"
-                android:layout_toRightOf="@+id/tableBoys"
-                android:src="@drawable/table_girls" />
-
-            <ImageView
+            <RelativeLayout
                 android:id="@+id/volleyBoys"
                 android:layout_height="120dp"
                 app:layout_widthPercent="30%"
-                android:layout_below="@+id/lawnGirls"
+                android:layout_below="@+id/chess"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
-                android:src="@drawable/volleyboys" />
+                android:layout_toEndOf="@+id/tableBoys"
+                android:layout_toRightOf="@+id/tableBoys"
+                >
 
-            <ImageView
-                android:id="@+id/volleyGirls"
-                app:layout_widthPercent="30%"
-                android:layout_height="120dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_below="@+id/lawnGirls"
-                android:layout_toEndOf="@+id/volleyBoys"
-                android:layout_toRightOf="@+id/volleyBoys"
-                android:src="@drawable/volleyballgirls" />
+                <ImageView
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:src="@drawable/volleyboys"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="VOLLEYBALL"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="14sp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="#000"/>
 
+            </RelativeLayout>
+
+           
 
 
 
