--- a/app/src/main/res/layout/fragment_home_sub_schedule.xml
+++ b/app/src/main/res/layout/fragment_home_sub_schedule.xml
@@ -5,24 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="iitropar.aarohan.MainActivity"
-    android:background="@drawable/schedule">
+   >
 
     <ImageView
         android:id="@+id/day1"
-        app:layout_widthPercent="50%"
-        app:layout_heightPercent="50%"
-
+        app:layout_widthPercent="40%"
+        app:layout_heightPercent="40%"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="25dp"
         android:scaleType="centerCrop"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:src = "@drawable/day1"/>
 
     <ImageView
         android:id="@+id/day2"
-        app:layout_widthPercent="50%"
-        app:layout_heightPercent="50%"
-
+        app:layout_widthPercent="40%"
+        app:layout_heightPercent="40%"
+        android:src = "@drawable/day2"
         android:layout_toRightOf="@+id/day1"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:scaleType="centerCrop"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -30,22 +35,14 @@
 
     <ImageView
         android:id="@+id/day3"
-        app:layout_widthPercent="50%"
-        app:layout_heightPercent="50%"
-
+        app:layout_widthPercent="40%"
+        app:layout_heightPercent="40%"
+        android:layout_marginBottom="40dp"
+        android:src = "@drawable/day_3"
         android:scaleType="centerCrop"
-
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+         />
 
-    <ImageView
-        android:id="@+id/day4"
-        app:layout_widthPercent="50%"
-        app:layout_heightPercent="50%"
 
-        android:scaleType="centerCrop"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 </android.support.percent.PercentRelativeLayout>
