--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,27 +10,18 @@
             android:title="Home" />
 
         <item
-            android:id="@+id/myEvents"
-            android:icon="@drawable/ic_notifications_active_black_24dp"
-            android:title="My Events" />
+            android:id="@+id/guidelines"
+            android:icon="@drawable/ic_warning_black_24dp"
+            android:title="Guidelines" />
         <item
             android:id="@+id/results"
             android:icon="@drawable/ic_result"
             android:title="Results" />
-        <item
-            android:id="@+id/sponsors"
-            android:icon="@drawable/ic_sponsor"
-            android:title="Sponsors" />
-        <item
-            android:id="@+id/announcement"
-            android:icon="@drawable/ic_announcement_black_24dp"
-            android:title="Announcements" />
-
 
         <item
             android:id="@+id/about"
             android:icon="@drawable/ic_about"
-            android:title="About Zeitgeist" />
+            android:title="About Aarohan" />
         <item
             android:id="@+id/contact"
             android:icon="@drawable/ic_contactus"
