Splash screen added

--- a/app/src/main/res/layout/fragment_home_sub_schedule.xml
+++ b/app/src/main/res/layout/fragment_home_sub_schedule.xml
@@ -17,7 +17,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src = "@drawable/day1"/>
+        android:src = "@drawable/day_1"/>
 
     <ImageView
         android:id="@+id/day2"
