--- a/app/src/main/res/layout/activity_schedule_day.xml
+++ b/app/src/main/res/layout/activity_schedule_day.xml
@@ -7,7 +7,12 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></Spinner>
+        android:layout_height="wrap_content"
+        android:dropDownWidth="match_parent"
+
+        >
+
+    </Spinner>
 
 
     <android.support.v7.widget.RecyclerView
