--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -3,15 +3,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash"
+    android:background="@color/white"
     >
-    <ProgressBar
-        android:id="@+id/splash_screen_progress_bar"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_centerInParent="true"
-        android:background="@color/white"
-        android:indeterminateDrawable="@drawable/wheel"
+    <pl.droidsonroids.gif.GifTextView
+        android:id="@+id/gifImageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/giphy"
         />
+
 </RelativeLayout>
