--- a/app/src/main/res/layout/blank_button.xml
+++ b/app/src/main/res/layout/blank_button.xml
@@ -5,13 +5,14 @@
 
     <TextView
         android:id="@+id/blankText"
-        android:text="@string/upcomingBlank"
+        android:text="Connect With Internet and then Refresh the Page"
         android:textSize="25sp"
         android:textStyle="italic"
         android:textColor="@color/colorPrimaryDark"
         android:layout_width="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
