--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,11 @@
             android:icon="@drawable/ic_about"
             android:title="About Aarohan" />
         <item
+            android:id="@+id/hospitality"
+            android:icon="@drawable/hospitality"
+            android:title="Hospitality" />
+            />
+        <item
             android:id="@+id/contact"
             android:icon="@drawable/ic_contactus"
             android:title="Contact Us" />
