--- a/app/src/main/res/layout/activity_about_zeitgeist.xml
+++ b/app/src/main/res/layout/activity_about_zeitgeist.xml
@@ -4,12 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="iitropar.aarohan.AboutZeitgeist">
+    tools:context="iitropar.aarohan.AboutZeitgeist"
+    android:background="@drawable/about">
 
-    <TextView
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/rules"
-        android:textSize="16sp"/>
+        android:scrollbars="vertical"
+        android:paddingBottom="5dp"
+        >
+
+        <com.bluejamesbond.text.DocumentView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="14dp"
+            android:layout_marginBottom="20dp"
+            app:documentView_antialias="true"
+            app:documentView_textAlignment="justified"
+            app:documentView_text="@string/about"
+            app:documentView_textSize="16sp"
+            android:paddingBottom="10dp"
+            app:documentView_insetPaddingBottom="15dp"/>
+
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
