--- a/app/src/main/res/layout/event_view_bs.xml
+++ b/app/src/main/res/layout/event_view_bs.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/design_bottom_sheet"
+<RelativeLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     app:behavior_hideable="true"
     app:behavior_peekHeight="50dp"
     app:elevation="4dp"
@@ -24,50 +23,80 @@
 
 
 
-    <RelativeLayout
-        android:id="@+id/name_layout"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/colorPrimaryDark"
+        <RelativeLayout
+            android:id="@+id/name_layout"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/colorPrimaryDark"
 
 
-        >
+            >
 
-        <TextView
-            android:id="@+id/eventName_bs"
-            android:text="Third Ball Elimination"
-            android:layout_marginTop="5dp"
-            android:layout_centerHorizontal="true"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/eventName_bs"
+                android:text="Third Ball Elimination"
+                android:layout_marginTop="5dp"
+                android:layout_centerHorizontal="true"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
+                />
+        </RelativeLayout>
+        <View
+            android:id="@+id/view_bs"
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:layout_below="@+id/name_layout"
+            android:background="@color/colorPrimaryDark"
             />
-    </RelativeLayout>
-    <View
-        android:id="@+id/view_bs"
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:layout_below="@+id/name_layout"
-        android:background="@color/colorPrimaryDark"
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/view_bs"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/view_bs"
+            android:layout_marginTop="10dp">
 
-        android:layout_marginTop="10dp">
-        <TextView
-            android:id="@+id/rules_bs"
-            android:text="@string/rules"
-            android:textSize="20sp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
+            <ScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/rules"
+                        android:text="Rules"
+                        android:textSize="20sp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:textAlignment="center"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+
+
+                    <TextView
+                        android:id="@+id/rules_bs"
+                        android:text="@string/rules"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"
+                        android:lineSpacingMultiplier="1.2"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp"
+                        android:layout_below="@id/rules"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="5dp"/>
+                </RelativeLayout>
+            </ScrollView>
+
+        </RelativeLayout>
     </RelativeLayout>
     <Button
         android:id="@+id/register_bs"
