--- a/app/src/main/res/layout/activity_guidelines.xml
+++ b/app/src/main/res/layout/activity_guidelines.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <com.github.barteksc.pdfviewer.PDFView
+    <!--com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/-->
 
 </android.support.constraint.ConstraintLayout>
